--- a/test/Makefile
+++ b/test/Makefile
@@ -5,18 +5,18 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/11/29 09:58:48 by mben-zeh          #+#    #+#              #
-#    Updated: 2023/11/29 10:42:01 by mben-zeh         ###   ########.fr        #
+#    Created: 2023/11/29 15:07:22 by mben-zeh          #+#    #+#              #
+#    Updated: 2023/11/29 15:07:39 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = megaphone
+NAME = test
 
 CPP = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = megaphone.cpp
+SRCS = test.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 
