--- a/CPP01/ex00/Makefile
+++ b/CPP01/ex00/Makefile
@@ -6,15 +6,17 @@
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/08 00:19:29 by mben-zeh          #+#    #+#              #
-#    Updated: 2023/12/08 00:57:03 by mben-zeh         ###   ########.fr        #
+#    Updated: 2023/12/11 01:13:16 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Zombie
+NAME = BraiiiiiiinnnzzzZ
 
 CPP = c++
 
 CPPFLAGS = -Wall -Werror -Wextra -std=c++98
+
+#-fsanitize=address -g3
 
 SRCS = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 
