--- a/CPP01/ex04/Makefile
+++ b/CPP01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/11 05:33:51 by mben-zeh          #+#    #+#              #
-#    Updated: 2023/12/11 05:56:37 by mben-zeh         ###   ########.fr        #
+#    Updated: 2023/12/12 04:50:12 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ CPP = c++
 
 CPPFLAGS = -Wall -Werror -Wextra -std=c++98 -fsanitize=address -g3
 
-SRCS = main.cpp 
+SRCS = main.cpp sed.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 
