--- a/CPP04/ex03/Makefile
+++ b/CPP04/ex03/Makefile
@@ -6,25 +6,26 @@
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/16 07:08:15 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/01/23 08:48:53 by mben-zeh         ###   ########.fr        #
+#    Updated: 2024/01/24 10:57:58 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = Materia
 
-CPP = c++
+CXX = c++
 
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98 
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
 #-fsanitize=address -g3
 
-SRCS = main.cpp AMateria.cpp Character.cpp Cure.cpp Ice.cpp MateriaSource.cpp
+SRCS = main.cpp AMateria.cpp Character.cpp Cure.cpp Ice.cpp MateriaSource.cpp 
 
 OBJS = ${SRCS:.cpp=.o}
 
 all : ${NAME}
 
 ${NAME} : ${OBJS}
-	${CPP} ${OBJS} ${CPPFLAGS} -o ${NAME}
+	${CXX} ${OBJS} ${CXXFLAGS} -o ${NAME}
 
 clean : 
 	rm -rf ${OBJS}
