--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/26 05:39:55 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/01/30 15:37:25 by mben-zeh         ###   ########.fr        #
+#    Updated: 2024/01/31 17:46:11 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,8 +17,7 @@ CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 
 #-fsanitize=address -g3
 
-SRCS = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp 
-#RobotomyRequestForm.cpp PresidentialPardonForm.cpp 
+SRCS = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp 
 
 OBJS = ${SRCS:.cpp=.o}
 
