--- a/CPP05/ex03/Makefile
+++ b/CPP05/ex03/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
+#    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/26 05:39:55 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/02/01 23:14:33 by codespace        ###   ########.fr        #
+#    Updated: 2024/02/02 17:08:23 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
