--- a/CPP06/ex00/Makefile
+++ b/CPP06/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/06 03:51:13 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/02/09 14:52:09 by mben-zeh         ###   ########.fr        #
+#    Updated: 2024/02/13 13:43:55 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,9 @@ NAME = convert
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g3
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 
+#-fsanitize=address -g3
+
 SRCS = main.cpp convert.cpp
 
 OBJS = ${SRCS:.cpp=.o}
