--- a/CPP06/ex02/Makefile
+++ b/CPP06/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/08 11:33:57 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/02/10 13:05:03 by mben-zeh         ###   ########.fr        #
+#    Updated: 2024/02/13 13:27:56 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,7 @@ NAME = base
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g3
 SRCS = main.cpp base.cpp
 
 OBJS = ${SRCS:.cpp=.o}
