--- a/CPP06/ex01/Makefile
+++ b/CPP06/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/08 11:30:11 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/02/10 12:41:22 by mben-zeh         ###   ########.fr        #
+#    Updated: 2024/02/13 13:44:31 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,9 @@ NAME = serializer
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 
+
+#-fsanitize=address -g3
 
 SRCS = main.cpp serializer.cpp  
 
