--- a/CPP08/ex01/Makefile
+++ b/CPP08/ex01/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/02/18 09:46:41 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/02/29 04:01:57 by mben-zeh         ###   ########.fr        #
+#    Created: 2024/03/07 08:33:50 by mben-zeh          #+#    #+#              #
+#    Updated: 2024/03/09 14:44:37 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,9 @@ NAME = Span
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g3
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
+#-fsanitize=address -g3
 
 SRCS = main.cpp Span.cpp
 
