--- a/CPP08/ex00/Makefile
+++ b/CPP08/ex00/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/02/18 09:44:32 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/02/27 22:12:40 by mben-zeh         ###   ########.fr        #
+#    Created: 2024/03/06 23:59:38 by mben-zeh          #+#    #+#              #
+#    Updated: 2024/03/07 00:08:57 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,9 @@ NAME = easyfind
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g3
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
+#-fsanitize=address -g3
 
 SRCS = main.cpp
 
