--- a/CPP08/ex02/Makefile
+++ b/CPP08/ex02/Makefile
@@ -5,19 +5,20 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mben-zeh <mben-zeh@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/02/18 09:54:01 by mben-zeh          #+#    #+#              #
-#    Updated: 2024/03/04 11:12:58 by mben-zeh         ###   ########.fr        #
+#    Created: 2024/03/08 11:47:36 by mben-zeh          #+#    #+#              #
+#    Updated: 2024/03/09 14:51:01 by mben-zeh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Stack
+NAME = MutantStack
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+
 #-fsanitize=address -g3
 
-SRCS = main.cpp
+SRCS = main.cpp 
 
 OBJS = ${SRCS:.cpp=.o}
 
